添加命令行启动参数

--- a/Dockerfile-alpine-tzdata
+++ b/Dockerfile-alpine-tzdata
@@ -7,10 +7,14 @@ RUN cd /srv/rack &&\
     ls -l bin
 
 
-FROM scratch
+FROM alpine:latest
 
 LABEL source.url="https://github.com/fimreal/rack"
 
 COPY --from=builder /srv/rack/bin/rack /rack
 
 CMD [ "/rack" ]
+
+RUN apk add --no-cache tzdata &&\
+    cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
+    echo "Asia/Shanghai" > /etc/timezone
