--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,4 +48,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mycsi:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cask:latest
