容器构建添加证书文件

--- a/Dockerfile-alpine-tzdata
+++ b/Dockerfile-alpine-tzdata
@@ -2,6 +2,7 @@ FROM golang:latest as builder
 
 COPY . /srv/rack
 
+RUN apk --no-cache add ca-certificates
 RUN cd /srv/rack &&\
     make docker-build &&\
     ls -l bin
@@ -11,6 +12,7 @@ FROM alpine:latest
 
 LABEL source.url="https://github.com/fimreal/rack"
 
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /srv/rack/bin/rack /rack
 
 CMD [ "/rack" ]
