--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,8 +47,19 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/rack:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ github.ref }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: Dockerfile-alpine-tzdata
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ github.ref }}-alpine
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:alpine
