--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -57,12 +57,12 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ github.ref }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ env.GIT_TAG }}
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: Dockerfile-alpine-tzdata
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ github.ref }}-alpine
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:alpine
+            ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ env.GIT_TAG }}-alpine
