--- a/Dockerfile-alpine-tzdata
+++ b/Dockerfile-alpine-tzdata
@@ -2,17 +2,21 @@ FROM golang:alpine as builder
 
 COPY . /srv/rack
 
-RUN apk --no-cache add ca-certificates
 RUN cd /srv/rack &&\
     make docker-build &&\
     ls -l bin
 
+# 下载证书
+FROM alpine:latest as ca
 
+RUN apk --no-cache add ca-certificates
+
+#
 FROM alpine:latest
 
 LABEL source.url="https://github.com/fimreal/rack"
 
-COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=ca /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /srv/rack/bin/rack /rack
 
 CMD [ "/rack" ]
