--- a/Dockerfile-alpine-tzdata
+++ b/Dockerfile-alpine-tzdata
@@ -4,19 +4,13 @@ RUN cd /srv/rack &&\
     make docker-build &&\
     ls -l bin 
 
-# 下载证书
-FROM alpine:latest as ca
-RUN apk --no-cache add ca-certificates
-
 #
 FROM alpine:latest
 LABEL source.url="https://github.com/fimreal/rack"
-RUN apk add --no-cache tzdata &&\
+RUN apk add --no-cache tzdata ca-certificates &&\
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     echo "Asia/Shanghai" > /etc/timezone
 
-COPY --from=ca /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /srv/rack/bin/rack /rack
 
 ENTRYPOINT [ "/rack" ]
-
