--- a/Dockerfile-alpine-tzdata
+++ b/Dockerfile-alpine-tzdata
@@ -7,6 +7,7 @@ RUN cd /srv/rack &&\
 #
 FROM alpine:latest
 LABEL source.url="https://github.com/fimreal/rack"
+# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 RUN apk add --no-cache tzdata ca-certificates &&\
     cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime &&\
     echo "Asia/Shanghai" > /etc/timezone
