1. add chatgpt api flags, 2. add acme static html support.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,7 +62,7 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ env.GIT_TAG }}
-      - name: Build and push
+      - name: Build and push from alpine
         uses: docker/build-push-action@v3
         with:
           platforms: linux/amd64,linux/arm64
