--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,9 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  bin = "./tmp/main -d --common --fileserver -w $PWD/tmp"
+  full_bin = "./tmp/main "
+  bin = "tmp/main"
+  args_bin = ["-d","-a"]
   cmd = "go build -o ./tmp/main ."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
@@ -11,7 +13,6 @@ tmp_dir = "tmp"
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
-  full_bin = ""
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   kill_delay = "0s"
