修改部分功能为mod

--- a/.air.toml
+++ b/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
   full_bin = "./tmp/main serve"
   bin = "tmp/main"
-  args_bin = ["-d"]
+  args_bin = ["-d","-a"]
   cmd = "go build -o ./tmp/main ."
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
