--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "module/scripts/static"]
 	path = module/scripts/static
-	url = git@github.com:fimreal/oneclick-scripts.git
+	url = https://github.com/fimreal/oneclick-scripts.git
 	branch = gh-pages
