--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,21 +54,26 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+      # - name: Clean Git cache
+      #   run: |
+      #     git rm -rf --cached .
+      #     git fetch origin main
+      #     git reset --hard origin/main
       - name: Set tag vars
         run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
           push: true
@@ -77,7 +82,7 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/rack:${{ env.GIT_TAG }}
       - name: Build and push from alpine
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
           push: true
