--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,8 @@ jobs:
       - name: set up go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.21
+          go-version: 'stable'
+          # go-version: '1.21'
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -54,11 +55,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
-      # - name: Clean Git cache
-      #   run: |
-      #     git rm -rf --cached .
-      #     git fetch origin main
-      #     git reset --hard origin/main
       - name: Set tag vars
         run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
 
