--- a/.air.toml
+++ b/.air.toml
@@ -16,7 +16,7 @@ tmp_dir = "bin"
   include_dir = []
   include_ext = ["go", "tpl", "tmpl", "html"]
   kill_delay = "0s"
-  log = "build-errors.log"
+  log = ""
   send_interrupt = false
   stop_on_error = true
 
